<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/preference">

        <PreferenceScreen
            android:key="actual_trip_mode"
            android:shouldDisableView="true"
            android:title="@string/actual_trip"
            android:summary="@string/actual_trip_mode" >

        </PreferenceScreen>


        <se.finalwork.nicetrip.views.EditLimitValuePreference
            android:defaultValue="80"
            android:dialogTitle="@string/set_value_limit"
            android:key="value_limit"
            android:summary="@string/value_limit_summary"
            android:title="@string/value_limit">

        </se.finalwork.nicetrip.views.EditLimitValuePreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/login_set">
        <PreferenceScreen
            android:key="default_mode"
            android:summary="@string/default_mode_summary"
            android:title="@string/set_login_page" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/database">

        <se.finalwork.nicetrip.views.ResetDataBase
        android:dialogTitle="@string/database_alert"
        android:key="delete_database"
        android:summary="@string/database_summary"
        android:title="@string/delete_database">

        </se.finalwork.nicetrip.views.ResetDataBase>
    </PreferenceCategory>

</PreferenceScreen>