
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bkg_papper"
    android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableNewTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#ffbb8c28"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_trip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="157dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/nicetrip_text"/>

        <TextView android:text="@string/text_destination"
            android:layout_marginLeft="5dp"
            android:textColor="#fe000000"
            android:textSize="15dp"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/destination"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/destination"
            android:inputType="text"/>

        <TextView
            android:text="@string/type_trip"
            android:textColor="#fe000000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"/>


        <TableRow
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp">

            <RadioGroup
                android:id="@+id/typeTrip"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/vacationBtn"
                    android:checked="true"
                    android:textColor="#fe000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacation" />

                <RadioButton
                    android:id="@+id/businessBtn"
                    android:textColor="#fe000000"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"/>
            </RadioGroup>

        </TableRow>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableNewTrip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:textColor="#fe000000"
                android:text="@string/arrival_date"/>

            <TextView
                android:layout_gravity="center"
                android:textColor="#fe000000"
                android:text="@string/exit_date"/>
        </TableRow>

        <TableRow
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/arrivalBtn"
                android:drawableLeft="@drawable/calendar_icon"
                android:text="@string/select"/>

            <Button
                android:id="@+id/exitBtn"
                android:drawableLeft="@drawable/calendar_icon"
                android:text="@string/select"/>
        </TableRow>
    </TableLayout>

        <TextView
            android:text="@string/text_budget"
            android:layout_marginLeft="5dp"
            android:textColor="#fe000000"
            android:drawableLeft="@drawable/budget_icon"
            android:textSize="15sp"/>

        <EditText
            android:hint="@string/budget"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:inputType="numberDecimal"
            android:id="@+id/budget" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableNewTrip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="30dp">
            <TextView
                android:text="@string/number_of_people"
                android:textColor="#fe000000"
                android:layout_marginRight="70dp"/>

            <EditText
                android:id="@+id/number_people"
                android:inputType="numberDecimal"
                android:layout_marginRight="10dp"/>
        </TableRow>
    </TableLayout>
        <Button
            android:onClick="saveTrip"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:drawableLeft="@drawable/save_trip_btn"
            android:text="@string/save_trip"
            android:id="@+id/save_trip" />



    </TableLayout>

</ScrollView>
